--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,12 +19,16 @@ landpage:
   - title: "Blog"
     url: /blog/
     image: scene1-1200-480.svg
+    height: 480
   - title: "Talks"
     url: /talks/
     image: scene2-1200-560.svg
+    height: 560
   - title: "Photos"
     url: /photos/
     image: scene3-1200-600.svg
+    height: 600
   - title: "Qui suis je ?"
     url: /about/
     image: scene4-1200-600.svg
+    height: 600
