--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,8 +21,10 @@ landpage:
     image: scene1-1200-480.svg
     height: 480
     text-left-offset: 50%
-    text-top-offset: 15%
-    text: articles récents  <ul><li>sample</li></ul>
+    text-top-offset: 20%
+    text: articles récents : Industrialisation Machine Learning à Voxxed Luxembourg
+    button-left-offset: 60%
+    button-top-offset: 40%
     button: button-lla.svg
   - title: "Talks"
     url: /talks/
@@ -31,6 +33,8 @@ landpage:
     text-left-offset: 10%
     text-top-offset: 15%
     text: sample <b>sample</b>
+    button-left-offset: 2%
+    button-top-offset: 40%
     button: button-lla.svg
   - title: "Photos"
     url: /photos/
@@ -39,6 +43,8 @@ landpage:
     text-left-offset: 60%
     text-top-offset: 15%
     text: sample <b>sample</b>
+    button-left-offset: 60%
+    button-top-offset: 40%
     button: button-vlp.svg
   - title: "Qui suis je ?"
     url: /about/
@@ -46,4 +52,6 @@ landpage:
     height: 600
     text-left-offset: 0%
     text-top-offset: 15%
+    button-left-offset: 45%
+    button-top-offset: 80%
     button: button-esp.svg
