--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,8 @@ url                      : # the base hostname & protocol for your site e.g. "ht
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/assets/images/logo.png"
+#logo                     : "/assets/images/logo.png"
+logo                     : "/assets/images/logo.svg"
 # removed
 banner                   : "/assets/images/banner-1200-300.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
