--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,31 +20,31 @@ landpage:
     url: /blog/
     image: scene1-1200-480.svg
     height: 480
-    text-left-offset: 606
-    text-top-offset: 570
+    text-left-offset: 50%
+    text-top-offset: 20%
     text: articles recents xxxxxxxxxx xxxxxxxx xxxxxxxxxx Industrialisation Machine Learning a Voxxed Luxembourg
-    button-left-offset: 523
-    button-top-offset: 697
+    button-left-offset: 75%
+    button-top-offset: 25%
     button: button-lla.svg
   - title: "Talks"
     url: /talks/
     image: scene2-1200-560.svg
     height: 560
     text-left-offset: 6%
-    text-top-offset: 20%
+    text-top-offset: 40%
     text: sample <b>sample</b> xxxxxxxxxxxx xxxxxxxxxxxx xxx xxxxxxx xxxxxxxx xxxxxxxx xxxxxxxxxx
     button-left-offset: 31%
-    button-top-offset: 40%
+    button-top-offset: 45%
     button: button-lla.svg
   - title: "Photos"
     url: /photos/
     image: scene3-1200-600.svg
     height: 600
     text-left-offset: 55%
-    text-top-offset: 22%
+    text-top-offset: 62%
     text: sample <b>sample</b> xxxxxxxxxxx xxxxxxx xxxxxxx xxxxxxxxxxx xxxxxxx xxxxxxx xxxx xxxxx xxxxxxxxxx
     button-left-offset: 78%
-    button-top-offset: 40%
+    button-top-offset: 67%
     button: button-vlp.svg
   - title: "Qui suis je ?"
     url: /about/
