--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,6 +18,7 @@ main:
 landpage:
   - title: "Blog"
     url: /blog/
+    titleImage: text-blog.svg
     image: scene1-1200-480.svg
     btn: Lire
     description: Des articles sur Java, Python, le Machine Learning, le design ...
@@ -25,11 +26,13 @@ landpage:
       - text: Industrialisation Machine Learning à Voxxed Luxembourg
   - title: "Talks"
     url: /talks/
+    titleImage: text-talks.svg
     image: scene2-1200-560.svg
     btn: Lire
     description: Présentations à Devoxx, Voxxed, Breizhcamp
   - title: "Photos"
     url: /photos/
+    titleImage: text-photos.svg
     image: scene3-1200-600.svg
     btn: Lire
     description: ça arrive bientôt
