--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,6 +19,7 @@ landpage:
   - title: "Blog"
     url: /blog/
     titleImage: text-blog.svg
+    titleHeight: 61
     image: scene1-1200-480.svg
     btn: Lire
     description: Des articles sur Java, Python, le Machine Learning, le design ...
@@ -27,12 +28,14 @@ landpage:
   - title: "Talks"
     url: /talks/
     titleImage: text-talks.svg
+    titleHeight: 70
     image: scene2-1200-560.svg
     btn: Lire
     description: Présentations à Devoxx, Voxxed, Breizhcamp
   - title: "Photos"
     url: /photos/
     titleImage: text-photos.svg
+    titleHeight: 75
     image: scene3-1200-600.svg
     btn: Lire
     description: ça arrive bientôt
