--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -25,6 +25,7 @@ landpage:
     description: Des articles sur Java, Python, le Machine Learning, le design ...
     featured:
       - text: Industrialisation Machine Learning à Voxxed Luxembourg
+        url: /blog/pres-voxxed/
   - title: "Talks"
     url: /talks/
     titleImage: text-talks.svg
