--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,6 +15,17 @@ main:
   # - title: "Sitemap"
   #   url: /sitemap/
 
+
+featured:
+  - title: "Blog"
+    url: /blog/
+    image: scene1-1200-480.svg
+    btn: Lire
+    featured:
+      - text: Industrialisation Machine Learning à Voxxed Luxembourg
+        url: /blog/pres-voxxed/
+        thumbnail: /assets/presentations/voxxed-lu-2019/cover-thumbnail.png
+
 landpage:
   - title: "Blog"
     url: /blog/
